手机端代上传资质功能完善

--- a/mobile/bsmm/customer.html
+++ b/mobile/bsmm/customer.html
@@ -2,11 +2,11 @@
 <div ng-style="toggleHead" class="customer common-style" ng-controller="customerController">
     <div data-load-more="customers.loadMore();" class="list">
         <ul>
-            <li ng-click="customers.getCustomerInfo($index,customer.ClientID);" ng-repeat="customer in customers.list">
+            <li ng-click="customers.getCustomerInfo($index,customer.ClientID,customer.C_Flag);" ng-repeat="customer in customers.list track by $index">
                 <div class="list-head">
                     <strong>{{customer.ClientCompanyName}}</strong>
-                    <span ng-click="customers.operatorCustomer($index)" data-stop-bubble ng-show="customer.ClientFlag==='9'&&(myInfo.module.product.pope_audit==='Y'||myInfo.UserFlag==='9'&&myInfo.UserType==='M')" class="state f_right"><em class="icon">&#x6c;</em>&nbsp;<em>审核</em></span>
-                	<span ng-click="customers.insteadSubmitOrder($index);" data-stop-bubble ng-show="customer.ClientFlag==='0'" class="state state-grey f_right"><em class="icon">&#x68;</em>&nbsp;<em>代下订单</em></span>
+                    <span ng-click="customers.operatorCustomer($index)" data-stop-bubble ng-show="customer.C_Flag === 'D'&&(myInfo.module.product.pope_audit==='Y'||myInfo.UserFlag==='9'&&myInfo.UserType==='M')" class="state f_right"><em class="icon">&#x6c;</em>&nbsp;<em>审核</em></span>
+                	<span ng-click="customers.insteadSubmitOrder($index);" data-stop-bubble ng-show="customer.C_Flag === 'T'" class="state state-grey f_right"><em class="icon">&#x68;</em>&nbsp;<em>代下订单</em></span>
                 </div>
                 <div class="list-body">
                     <span>姓名：{{customer.ClientTrueName}} &emsp;<span class="state state-green">{{customer.flagText}}</span></span>
