--- a/mobile/bsmm/home.html
+++ b/mobile/bsmm/home.html
@@ -29,14 +29,18 @@
                 </p>
             </li>
             <li ng-click="needProcessOrder();"><strong style="color: #ff7e5a;">{{homeInfo.auditOrder}}</strong><br/>待处理订单</li>
-        </ul>
-    </section>
-    <div class="icon-bar yesterday">
-        <ul>
             <li ng-click="changePath('/sales')">
                 <p class="icon">&#xe0ec;</p>
                 <p>销量一览</p>
             </li>
+        </ul>
+    </section>
+    <div class="icon-bar yesterday">
+        <ul>
+            <!--<li ng-click="changePath('/sales')">
+                <p class="icon">&#xe0ec;</p>
+                <p>销量一览</p>
+            </li>-->
             <li ng-click="changePath('/goods-hot')">
                 <p class="icon">&#xe008;</p>
                 <p>热销商品</p>
@@ -48,6 +52,10 @@
             <li ng-click="changePath('/rece-money')">
                 <p class="icon">&#xe014;</p>
                 <p>应收款项</p>
+            </li>
+            <li ng-click="changePath('/add-shop')">
+                <p class="icon">&#xe014;</p>
+                <p>上传药店资质</p>
             </li>
         </ul>
     </div>
