--- a/mobile/bsmm/home.html
+++ b/mobile/bsmm/home.html
@@ -1,4 +1,8 @@
-<div class="content" ng-controller="homeController">
+<div class="content" ng-controller="homeController" data-iscroll>
+<!--<div > -->
+	<div id="">
+		
+	
     <div class="today">
         <ul>
             <li>¥ <strong>{{homeInfo.today.orderTotal}}</strong><br/>今日销售额</li>
@@ -59,4 +63,6 @@
             </li>
         </ul>
     </div>
+<!--</div>-->
+</div>
 </div>
